--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph2"
+    app:startDestination="@id/LoginFragment">
 
+    <fragment
+        android:id="@+id/LoginFragment"
+        android:name="com.whizzarc.inventorypos.loginscreen.LoginScreen"
+        android:label="@string/login_fragment_label"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_login_to_home"
+            app:destination="@id/HomeFragment"
+            app:popUpTo="@id/nav_graph2"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <activity
+        android:id="@+id/HomeFragment"
+        android:name="com.whizzarc.inventorypos.homescreen.HomeScreen"
+        android:label="@string/home_fragment_label"
+        tools:layout="@layout/activity_home">
+    </activity>
 </navigation>
